chore: ui changes

--- a/_app/_pages/note.html
+++ b/_app/_pages/note.html
@@ -1,8 +1,8 @@
 ---
 layout: page
-title: Notes
+title: 筆記
 permalink: /note/
-desc: 筆記・ノート・TL;DR
+desc: ノート・TL;DR
 ---
 
 {% for post in site.tags.notes %}
