--- a/_app/_pages/work.html
+++ b/_app/_pages/work.html
@@ -1,8 +1,8 @@
 ---
 layout: page
-title: Works
+title: 作品
 permalink: /work/
-desc: 作品・ワークス・TBC
+desc: ワークス・TBC
 ---
 
     <h2>Personal Projects</h2>
