chroe: moduler js

--- a/_app/_pages/note.html
+++ b/_app/_pages/note.html
@@ -3,6 +3,7 @@ layout: page
 title: 筆記
 permalink: /note/
 desc: ノート・TL;DR
+plugin: twemoji
 ---
 <h2>Notes</h2>
 {% for post in site.tags.blog_notes %}
