chore: using GA4

--- a/_app/_pages/index.html
+++ b/_app/_pages/index.html
@@ -7,7 +7,7 @@ plugin: twemoji
 
 <div class="content">
     <p>📫 email: <a href="mailto:hi@gufeng.sh">hi@gufeng.sh</a></p>
-    <p>🎁 gpg: <a href="https://keybase.io/worried_08hunch/pgp_keys.asc?fingerprint=224b1f9f66a78c2e15914bc91336118b2540aa30"><code>13:36:11:8B:25:40:AA:30</code></a></p>
+    <p>🎁 gpg: <a href="https://keybase.io/worried_08hunch/pgp_keys.asc?fingerprint=224b1f9f66a78c2e15914bc91336118b2540aa30" target="_blank"><code>13:36:11:8B:25:40:AA:30</code></a></p>
 
     <h2>Colophon</h2>
     <p>那天气总是阴沉的，如铁石心肠
